--- a/composer.json
+++ b/composer.json
@@ -7,7 +7,8 @@
 	"require": {
 		"laravel/framework": "5.0.*",
 		"illuminate/html": "~5.0",
-		"maddhatter/laravel-fullcalendar": "~1.1"
+		"maddhatter/laravel-fullcalendar": "~1.1",
+		"jenssegers/date": "~2.0"
 	},
 	"require-dev": {
 		"phpunit/phpunit": "~4.0",
